[package]
name = "learn_gfx-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "~1.3.2"
gfx-hal = "=0.7.0"
shaderc = "=0.7.2"
image = "~0.23.14"
serde = { version = "~1.0.125", features = ["derive"] }
winit = "~0.24.0"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.7.0"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.7.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.7.0"